--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Appvaluo</title>
-  <base href="/">
+  <base href="/appvaluo-demo/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -17,6 +17,7 @@
 <body class="mat-typography">
   <app-root></app-root>
 <link rel="modulepreload" href="chunk-F44VSYY7.js"><script src="polyfills-HPZ7KTN2.js" type="module"></script><script src="main-VPIWWAIU.js" type="module"></script></body>
+
 
 
 
