--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 
 <body class="mat-typography">
   <app-root></app-root>
-<link rel="modulepreload" href="chunk-F44VSYY7.js"><script src="polyfills-HPZ7KTN2.js" type="module"></script><script src="main-VPIWWAIU.js" type="module"></script></body>
-
+<link rel="modulepreload" href="chunk-F44VSYY7.js"><script src="polyfills-HPZ7KTN2.js" type="module"></script><script src="main-WA7KXS4O.js" type="module"></script></body>
 
 
 
